re-added gap to icons-bar to try if it was a temporary bug. but it's not

--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,7 @@ CENTRAL SECTION
 
 .icons.bar {
     justify-content: center;
+    gap: 2rem;
 }
 
 .controls {
